@@ -1,10 +1,15 @@
 partman-auto (82) UNRELEASED; urgency=low
 
+  [ Giuseppe Iuculano ]
   * lib/auto-shared.sh: Consider device-mapper devices/dmraid arrays with the
     sataraid flag set as usable for automatic partitioning.
     Patch based on work done by Luke Yelavich <themuso@ubuntu.com> in Ubuntu.
 
- -- Giuseppe Iuculano <giuseppe@iuculano.it>  Sat, 06 Sep 2008 18:23:55 +0200
+  [ Frans Pop ]
+  * Factor out is_multipath_dev function to base.sh function library.
+    Requires partman-base (>= 126).
+
+ -- Frans Pop <fjp@debian.org>  Mon, 15 Sep 2008 13:02:55 +0200
 
 partman-auto (81) unstable; urgency=low
 
